Trying to fix safari box-shadow bug and scorebar alignment on mobile

--- a/components/common/Scorebar.module.sass
+++ b/components/common/Scorebar.module.sass
@@ -2,8 +2,7 @@
 
 .container
 	display: grid
-	grid-auto-flow: column
-	grid-template: auto / repeat(4, 60px)
+	grid-template-columns: repeat(auto-fill, minmax(min-content, 60px))
 	gap: 0.66rem
 	text-align: center
 	user-select: none
