--- a/components/etusivu/KehitysEdut.module.sass
+++ b/components/etusivu/KehitysEdut.module.sass
@@ -12,6 +12,7 @@
 	gap: 1rem
 	place-content: center
 	place-items: center
+	padding: 2rem
 .contentWrap
 	position: relative
 	min-height: 360px
@@ -19,7 +20,6 @@
 	display: block
 	width: max-content
 	max-width: 100%
-	margin-top: 1rem
 	position: absolute
 	left: 50%
 	text-align: center
@@ -34,10 +34,14 @@
 	border-radius: 999px
 	cursor: help
 	box-shadow: shadows.$shadowSmall
-	background: linear-gradient(-45deg, rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.3))
+	// background: linear-gradient(-45deg, rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.3))
 	overflow: hidden
+	filter: saturate(10%)
+	&:hover
+		filter: saturate(100%)
 .selected
 	box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2), inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5)
+	filter: saturate(100%)
 .tehokkuusIcon
 	background-color: colors.$red
 .turvallisuusIcon
